--- a/tasks/prepare/prepare.yml
+++ b/tasks/prepare/prepare.yml
@@ -155,11 +155,11 @@
     owner: "{{ wireguard_conf_owner }}"
     group: "{{ wireguard_conf_group }}"
     mode: "{{ wireguard_conf_mode }}"
-  # no_log: '{{ ansible_verbosity < 3 }}'
+  no_log: '{{ ansible_verbosity < 3 }}'
   tags:
     - wg-config
-  # notify:
-  #   - reconfigure wireguard
+  notify:
+    - reconfigure wireguard
 
 - name: Ensure legacy reload-module-on-update is absent
   ansible.builtin.file:
@@ -168,9 +168,9 @@
   tags:
     - wg-config
 
-# - name: Start and enable WireGuard service
-#   ansible.builtin.service:
-#     name: "wg-quick@{{ wireguard_interface }}"
-#     state: "{{ wireguard_service_state }}"
-#     enabled: "{{ wireguard_service_enabled }}"
-#   when: not ansible_os_family == 'Darwin'
+- name: Start and enable WireGuard service
+  ansible.builtin.service:
+    name: "wg-quick@{{ wireguard_interface }}"
+    state: "{{ wireguard_service_state }}"
+    enabled: "{{ wireguard_service_enabled }}"
+  when: not ansible_os_family == 'Darwin'
