--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -1,23 +1,73 @@
 ---
 dependency:
   name: galaxy
-driver:
-  name: docker
 lint: |
   set -e
   yamllint .
 #  ansible-lint
+driver:
+  name: vagrant
+  provider:
+    name: libvirt
+    type: libvirt
+    options:
+      memory: 1
+      cpus: 1
+
 platforms:
-  - name: instance
-    image: geerlingguy/docker-${MOLECULE_DISTRO:-centos8}-ansible:latest
-    command: ""
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:rw
-      - /lib/modules:/host/lib/modules:ro
-    cgroupns_mode: host
-    privileged: true
-    pre_build_image: true
+  - name: test-wg-ubuntu2004
+    box: generic/ubuntu2004
+    interfaces:
+      - auto_config: true
+        network_name: private_network
+        type: static
+        ip: 192.168.10.10
+    groups:
+      - vpn
+      - ubuntu
+  - name: test-wg-ubuntu1804
+    box: generic/ubuntu1804
+    interfaces:
+      - auto_config: true
+        network_name: private_network
+        type: static
+        ip: 192.168.10.20
+    groups:
+      - vpn
+      - ubuntu
+  - name: test-wg-debian11
+    box: generic/debian11
+    interfaces:
+      - auto_config: true
+        network_name: private_network
+        type: static
+        ip: 192.168.10.30
+    groups:
+      - vpn
+      - debian
+  - name: test-wg-ubuntu2204
+    box: alvistack/ubuntu-22.04
+    interfaces:
+      - auto_config: true
+        network_name: private_network
+        type: static
+        ip: 192.168.10.40
+    groups:
+      - vpn
+      - ubuntu
+
 provisioner:
   name: ansible
+  connection_options:
+    ansible_ssh_user: vagrant
+    ansible_become: true
+  log: true
+
+scenario:
+  name: kvm-single-server
+  test_sequence:
+    - prepare
+    - converge
+
 verifier:
   name: ansible
