--- a/tasks/setup/setup-debian-pve-host-variant.yml
+++ b/tasks/setup/setup-debian-pve-host-variant.yml
@@ -7,10 +7,12 @@
 - name: (Proxmox) Add WireGuard repository
   ansible.builtin.apt_repository:
     repo: "deb http://deb.debian.org/debian buster-backports main"
-    state: "{{ 'present' if (ansible_distribution_version | int <= 10) else 'absent' }}"
+    state: "{{ 'present' if (ansible_distribution_version
+     | int <= 10) else 'absent' }}"
     update_cache: true
 
-- name: (Proxmox) Install kernel headers for the currently running kernel to compile WireGuard with DKMS
+- name: (Proxmox) Install kernel headers for the currently
+    running kernel to compile WireGuard with DKMS
   ansible.builtin.apt:
     name:
       - "pve-headers-{{ ansible_kernel }}"
