--- a/tasks/setup/setup-debian-raspbian-buster.yml
+++ b/tasks/setup/setup-debian-raspbian-buster.yml
@@ -66,7 +66,8 @@
     - wireguard__register_kernel_update is changed
     - wireguard__register_molly_guard.stat.exists
 
-- name: (Raspbian) Waiting for host to be available (Ansible < 2.8, with molly-guard)
+- name: (Raspbian) Waiting for host to
+    be available (Ansible < 2.8, with molly-guard)
   ansible.builtin.wait_for_connection:
   when:
     - ansible_version.full is version('2.8.0', '<')
