--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -3,7 +3,7 @@
   hosts: all
   vars_files:
     - ../../vars/main.yml
-
+    - ../../defaults/main.yml
   tasks:
     - name: Verify that ipsec is running
       systemd:
