--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -16,6 +16,10 @@ platforms:
     box: geerlingguy/ubuntu2004
     memory: 1024
     cpus: 1
+  - name: test-wg-ubuntu1804
+    box: geerlingguy/ubuntu1804
+    memory: 1024
+    cpus: 1
   - name: test-wg-debian11
     box: geerlingguy/debian11
     memory: 1024
@@ -24,10 +28,10 @@ platforms:
     box: geerlingguy/rockylinux8
     memory: 1024
     cpus: 1
-  - name: test-wg-centos7
-    box: geerlingguy/centos7
-    memory: 1024
-    cpus: 1
+  # - name: test-wg-centos7
+  #   box: geerlingguy/centos7
+  #   memory: 1024
+  #   cpus: 1
 provisioner:
   name: ansible
   connection_options:
