--- a/main.yml
+++ b/main.yml
@@ -1,66 +1,6 @@
 ---
 - hosts: all
   become: true
-
-  vars_files:
-    - vars/main.yml
-    - vars/{{ ansible_os_family }}.yml
-    - defaults/main.yml
-
-  handlers:
-    - import_tasks: handlers/main.yml
-
-    - name: reboot system
-      reboot:
-        msg: "Reboot initiated by Ansible to load new kernel modules"
-
-    - name: restart ssh
-      service: name=sshd state=restarted
-
-    - name: restart fail2ban
-      service: name=fail2ban state=restarted
-
-    - name: restart ipsec
-      service: name=ipsec state=restarted
-
-    - name: reload ufw
-      service: name=ufw state=restarted
-
-    - name: restart firewalld
-      command: firewall-cmd --reload
-
-    - name: restart openvpn
-      service: name=openvpn state=restarted
-
-    - name: restart ipsec
-      service: name={{ ipsec_package_name }} state=restarted enabled=yes
-
-    - name: restart xl2tpd
-      service: name=xl2tpd state=restarted enabled=yes
-
-    - name: restart ovpn-admin
-      systemd:
-        state: restarted
-        enabled: true
-        daemon_reload: true
-        name: ovpn-admin
-
   tasks:
-    - include_tasks: tasks/epel/{{ ansible_distribution }}.yml
-      when: ansible_os_family == 'RedHat'
-
-    - import_tasks: tasks/routing/public-ip.yml
-
-    - import_tasks: tasks/secure/secure-Debian.yml
-      when: ansible_os_family == 'Debian'
-
-    - import_tasks: tasks/secure/secure-RedHat.yml
-      when: ansible_os_family == 'RedHat'
-
-    - import_tasks: tasks/routing/routing-Debian.yml
-      when: ansible_os_family == 'Debian'
-
-    - import_tasks: tasks/routing/routing-RedHat.yml
-      when: ansible_os_family == 'RedHat'
-
-    - import_tasks: tasks/prepare/prepare.yml
+    - include_role:
+        name: role.android06.wireguard
