--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -10,7 +10,7 @@ driver:
   provider:
     name: virtualbox
     type: virtualbox
-
+    parallel: true
 platforms:
   - name: test-wg-ubuntu2004
     box: geerlingguy/ubuntu2004
@@ -24,12 +24,10 @@ platforms:
     box: geerlingguy/debian11
     memory: 1024
     cpus: 1
-  # - name: test-wg-rocky8
-  #   box: geerlingguy/rockylinux8
-  #   memory: 1024
-  #   cpus: 1
-  #   instance_raw_config_args:
-  #     - "vm.boot_timeout = 600"
+  - name: test-wg-rocky8
+    box: geerlingguy/rockylinux8
+    memory: 1024
+    cpus: 1
 provisioner:
   name: ansible
   connection_options:
