Add provision option

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -11,6 +11,7 @@ driver:
     name: virtualbox
     type: virtualbox
     parallel: true
+    provision: yes
 platforms:
   - name: test-wg-ubuntu2004
     box: geerlingguy/ubuntu2004
