Move security to separate role

--- a/main.yml
+++ b/main.yml
@@ -3,4 +3,6 @@
   become: true
   tasks:
     - include_role:
+        name: role.android06.security
+    - include_role:
         name: role.android06.wireguard
