--- a/roles/role.android06.security/tasks/secure/secure-Debian.yml
+++ b/roles/role.android06.security/tasks/secure/secure-Debian.yml
@@ -12,6 +12,7 @@
   notify: restart ssh
 
 - name: Update and upgrade apt packages.
+  when: upgrade_packages == true
   tags: notest
   apt:
     update_cache: true
@@ -23,20 +24,16 @@
     name: ufw
     state: present
 
-# User account configuration.
-- name: Add a deployment user.
-  user:
-    name: ovpn-admin
-    state: present
-
-# Disable root login and use `sudo`.
-- name: Add sudo rights for deployment user.
-  lineinfile:
-    dest: /etc/sudoers
-    regexp: '^ovpn-admin'
-    line: 'ovpn-admin ALL=(ALL) NOPASSWD: ALL'
-    state: present
-    validate: 'visudo -cf %s'
+- name: Open SSH port
+  ufw:
+    rule: allow
+    direction: in
+    proto: "tcp"
+    port: "22"
+    comment: Created by Ansible
+    state: enabled
+    delete: false
+  notify: reload ufw
 
 # Remove unused software, open only required ports.
 - name: Remove unused packages.
@@ -74,17 +71,25 @@
     state: started
     enabled: true
 
-- name: Open ports for Wireguard
-  ufw:
-    rule: allow
-    direction: in
-    proto: "{{ item.proto }}"
-    port: "{{ item.port }}"
-    comment: Created by Ansible
-    state: enabled
-    delete: false
-  with_items:
-    - {port: '22', proto: 'tcp'}
-    - {port: '{{ wireguard_port }}', proto: 'udp'}
+- name: Ensure UFW is running and enabled on boot.
+  service:
+    name: ufw
+    state: started
+    enabled: true
 
-  notify: reload ufw
+- name: Count sshd jails
+  ansible.builtin.shell: |
+    set -o errexit
+    set -o pipefail
+    set -o nounset
+    fail2ban-client status | grep "sshd" | wc -l
+    exit 0
+  args:
+    executable: "/bin/bash"
+  register: sshd_jail_count
+  changed_when: false
+
+- name: There should be at least one sshd jail
+  ansible.builtin.assert:
+    that:
+      - "sshd_jail_count.stdout|int > 0"
