--- a/roles/role.android06.wireguard/defaults/main.yml
+++ b/roles/role.android06.wireguard/defaults/main.yml
@@ -125,3 +125,6 @@ wgui_mtu: 1400
 
 #User for wireguard ui service
 wireguard_ui_user: wgui-admin
+
+#Reverse proxy configuration
+wgui_server_name: wgui.myhomelab.xyz
