--- a/roles/role.android06.wireguard/tasks/setup/setup-wgui.yml
+++ b/roles/role.android06.wireguard/tasks/setup/setup-wgui.yml
@@ -4,11 +4,15 @@
   stat:
     path: "{{ wgui_path }}/wireguard-ui"
   register: register_wgui_installed
+  tags:
+    - wgui-install
 
 - name: Ensure nginx is installed
   package:
     name: nginx
     state: present
+  tags:
+    - wgui-install
 
 - name: Open ports for nginx (Debian)
   when: ansible_os_family == 'Debian'
@@ -24,6 +28,8 @@
     - {port: '80', proto: 'tcp'}
     - {port: '443', proto: 'tcp'}
   notify: reload ufw
+  tags:
+    - wgui-install
 
 - name: Open ports for nginx (RHEL)
   when: ansible_os_family == 'RedHat'
@@ -38,12 +44,16 @@
   with_items:
     - {state: 'enabled', port: '80/tcp'}
     - {state: 'enabled', port: '443/tcp'}
+  tags:
+    - wgui-install
 
 # Wireguard UI user account configuration.
 - name: Add a wireguard-ui user.
   user:
     name: "{{ wireguard_ui_user }}"
     state: present
+  tags:
+    - wgui-install
 
 - name: ensure Wireguard UI directory exists
   when: not register_wgui_installed.stat.exists
@@ -52,6 +62,8 @@
     state: directory
     owner: "{{ wireguard_ui_user }}"
     group: "{{ wireguard_ui_user }}"
+  tags:
+    - wgui-install
 
 - name: Ensure Wireguard configuration directory is owned by Wireguard UI user
   file:
@@ -60,6 +72,8 @@
     recurse: true
     owner: "{{ wireguard_ui_user }}"
     group: "{{ wireguard_ui_user }}"
+  tags:
+    - wgui-install
 
 - name: Unarchive Wireguard UI to {{ wgui_path }}
   when: not register_wgui_installed.stat.exists
@@ -67,6 +81,8 @@
     src: "https://github.com/ngoduykhanh/wireguard-ui/releases/download/v0.4.0/wireguard-ui-v0.4.0-linux-amd64.tar.gz"
     dest: "{{ wgui_path }}"
     remote_src: true
+  tags:
+    - wgui-install
 
 - name: Place Wireguard UI systemd unit
   ansible.builtin.template:
@@ -77,6 +93,8 @@
     mode: "0640"
   notify:
     - restart wgui
+  tags:
+    - wgui-install
 
 - name: Ensure nginx can connect to the network.
   seboolean:
@@ -84,6 +102,8 @@
     state: true
     persistent: true
   when: ansible_selinux.status == 'enabled'
+  tags:
+    - wgui-install
 
 - name: delete default nginx site
   when: ansible_os_family == 'Debian'
@@ -91,6 +111,8 @@
     path: /etc/nginx/sites-enabled/default
     state: absent
   notify: restart nginx
+  tags:
+    - wgui-install
 
 - name: Place nginx site config (Debian)
   when: ansible_os_family == 'Debian'
@@ -99,6 +121,8 @@
     dest: "/etc/nginx/sites-enabled/{{ wgui_server_name }}"
   notify:
     - restart nginx
+  tags:
+    - wgui-install
 
 - name: Place nginx site config (RedHat)
   when: ansible_os_family == 'RedHat'
@@ -107,6 +131,8 @@
     dest: "/etc/nginx/conf.d/{{ wgui_server_name }}.conf"
   notify:
     - restart nginx
+  tags:
+    - wgui-install
 
 - name: Install system unit for automatic wireguard restart
   ansible.builtin.template:
@@ -117,6 +143,8 @@
     mode: "0640"
   notify:
     - restart wgui-restart.service
+  tags:
+    - wgui-install
 
 - name: Install system unit for handling config changes
   ansible.builtin.template:
@@ -127,3 +155,5 @@
     mode: "0640"
   notify:
     - restart wgui-restart.path
+  tags:
+    - wgui-install
