Added nginx whitelist

--- a/roles/role.android06.security/tasks/secure/secure-Debian.yml
+++ b/roles/role.android06.security/tasks/secure/secure-Debian.yml
@@ -42,6 +42,7 @@
       - nano
       - sendmail
     state: absent
+    lock_timeout: "3600"
 
 # Automating updates for Debian systems.
 - name: Install unattended upgrades package.
