Change folder structure

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -9,4 +9,6 @@
         cache_valid_time: 3600
       when: ansible_os_family == 'Debian'
 
-- import_playbook: ../../main.yml
+  roles:
+    - role: android06.security
+    - role: wireguard-ansible
